--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+  </head>
+  <body>
+    <header class="color-header">
+      <h1 class="instagram-logo" alt="instagram logo"></h1>
+      <nav>
+        <ul>
+          <li class="sign-up-logo">
+            <a class="log-in" href="#" alt="Sign up logo">Log in</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div class="phones-logo"></div>
+    <main class="main-location">
+      <h2 class="header2-color">
+        Capture and Share <br />
+        the World's Moments
+      </h2>
+      <p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful </strong> and
+        <strong>fun</strong> way to share your life<br />
+        with friends and family <br />
+        <br />
+        Take a picture or video, choose a filter to transform its look <br />
+        and feel, then post to Instagram &mdash; it's that easy. You can <br />
+        even share to Facebook, Twitter, Tumblr and more. It's a <br />
+        new way to see the world. <br />
+        <br />
+        Oh yeah, did we mention it's free?
+      </p>
+      <div class="iphone-logo" alt="Download on the App Store"></div>
+      <div class="android-logo" alt="Get it on Google Play"></div>
+    </main>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <footer class="footer">
+      <nav class="nav-left">
+        <ul class="footer-notes">
+          <li><a class="text-none" href="#">About Us</a></li>
+          <li><a class="text-none" href="#">Support</a></li>
+          <li><a class="text-none" href="#">Blog</a></li>
+          <li><a class="text-none" href="#">Press</a></li>
+          <li><a class="text-none" href="#">API</a></li>
+          <li><a class="text-none" href="#">Jobs</a></li>
+          <li><a class="text-none" href="#">Privacy</a></li>
+          <li><a class="text-none" href="#">Terms</a></li>
+          <li id="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
