--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,33 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Instagram</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="container">
       <div class="content">
-        <div class="left">
+        <div class="left float-left">
           <img src="images/phones.png" alt="Image phones with a app's screen" />
         </div>
-        <div class="right">
+        <div class="right float-left">
           <div class="header">
             <header>
-              <div class="logo">
+              <div class="logo float-left">
                 <img src="images/brand.png" alt="Instagram logo" />
               </div>
-              <div class="navigation">
+              <div class="navigation float-right">
                 <nav>
                   <div>
-                    <a href="#">Log In</a>
+                    <a class="btn" href="#"
+                      ><img src="images/home.png" alt="Home icon" />Log In</a
+                    >
                   </div>
                 </nav>
               </div>
+              <div class="clearfix"></div>
             </header>
           </div>
           <div class="description">
-            <h1>Capture and Share the World's Moments</h1>
+            <h1 class="title">
+              Capture and Share<br />
+              the World's Moments
+            </h1>
             <p>
-              Instagram is a fast, beautiful and fun way to share your life with
-              friends and family.
+              Instagram is a <strong>fast, beautiful</strong> and
+              <strong>fun</strong> way to share your life with friends and
+              family.
             </p>
             <p>
               Take a picture or video, choose a filter to transform its look and
@@ -40,35 +49,40 @@
               the world.
             </p>
             <p>Oh yeah, did we mention it's free?</p>
-          </div>
-          <div class="download-links">
-            <a href="#"
-              ><img
-                src="images/badge-iphone.png"
-                alt="Download on the App Store"
-            /></a>
-            <a href="#"
-              ><img src="images/badge-android.png" alt="Get it on Google Play"
-            /></a>
+            <div class="download-links">
+              <a href="#" class="float-left"
+                ><img
+                  src="images/badge-iphone.png"
+                  alt="Download on the App Store"
+              /></a>
+              <a href="#" class="float-left"
+                ><img src="images/badge-android.png" alt="Get it on Google Play"
+              /></a>
+              <div class="clearfix"></div>
+            </div>
           </div>
         </div>
+        <div class="clearfix"></div>
       </div>
     </div>
     <footer>
-      <div class="links">
-        <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Press</a></li>
-          <li><a href="#">API</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Terms</a></li>
-        </ul>
-      </div>
-      <div class="copyrigth">
-        <p>&copy; 2014 Instagram</p>
+      <div class="info">
+        <div class="links float-left">
+          <ul>
+            <li class="float-left"><a href="#">About Us</a></li>
+            <li class="float-left"><a href="#">Support</a></li>
+            <li class="float-left" float-left><a href="#">Blog</a></li>
+            <li class="float-left"><a href="#">Press</a></li>
+            <li class="float-left"><a href="#">API</a></li>
+            <li class="float-left"><a href="#">Jobs</a></li>
+            <li class="float-left"><a href="#">Privacy</a></li>
+            <li class="float-left"><a href="#">Terms</a></li>
+          </ul>
+        </div>
+        <div class="copyrigth float-left">
+          <p>&copy; 2014 Instagram</p>
+        </div>
+        <div class="clearfix"></div>
       </div>
     </footer>
   </body>
