No consigo colocarl el texto

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,55 +17,59 @@
 
       <div class="phones">
         <img src="images/phones.png">
-      </div>
-      <div class="instagram">
-        <div>
-          <img src="images/brand.png"> 
-          <button class="boton"><img src="images/home.png"> Login in</button>
-          <div class="caja">
-            <h1>Capture and Share the World's Moments</h1>
-            <p class="text">
-              Instagram is a <Strong>fast</Strong>,<strong>beautiful</strong> and <strong>fun</strong> way to share your
-              life with friends and family.
+        <div class="instagram">
+          <div>
+            <img class="logo" src="images/brand.png">
+            <button class="boton"><img src="images/home.png"> <strong>Login in</button></strong>
+            <div class="caja">
+              <h1>Capture and Share the World's Moments</h1>
+              <p class="text">
+                Instagram is a <Strong>fast</Strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share
+                your
+                
+                life with friends and family.
 
-              <p class="text1">
-                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-                &mdash; it's
-                that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                <p class="text1">
+                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                  &mdash; it's
+                  that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                </p>
+
+                <p class="text2">
+                  Oh yeah, did we mention it's free?
+                </p>
+
               </p>
+              <div class="logos">
+                <img src="images/badge-iphone.png">
 
-              <p class="text2">
-                Oh yeah, did we mention it's free?
-              </p>
+                <img src="images/badge-android.png">
+              </div>
+              
+            </div>
 
-            </p>
+
           </div>
+
         </div>
+    <footer>
 
+            <Strong>About Us</Strong>
 
-        <div class="logos">
-          <img src="images/badge-iphone.png">
+            <Strong>Support</Strong>
 
-          <img src="images/badge-android.png">
-        </div>
-      </div>
+            <Strong>Blog</Strong>
 
-      <footer>
-        <Strong>About Us</Strong>
+            <Strong>Press</Strong>
 
-        <Strong>Support</Strong>
+            <Strong>API</Strong>
 
-        <Strong>Blog</Strong>
+            <Strong>Jobs</Strong>
 
-        <Strong>Press</Strong>
+            <strong>Privacy Terms</strong>
 
-        <Strong>API</Strong>
-
-        <Strong>Jobs</Strong>
-
-        <strong>Privacy Terms</strong>
-
-        <strong class="colorcopy">&copy; 2014 Instagram </strong>
+            <strong class="colorcopy">&copy; 2014 Instagram </strong>
+          </footer>
 
 
 
@@ -74,7 +78,8 @@
 
 
 
-      </footer>
+
+
   </main>
 </body>
 
