--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,8 +2,34 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <div class="bg">
+    <div class="blue"></div>
+    <div class="white"></div>
+  </div>
+  <div class="container">
+    <div class="mobiles">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div class="content">
+      <header>
+          <div class="logo">
+              <img src="images/brand.png" alt="">
+          </div>
+          <div class="login">
+<img src="images/home.png" alt="">
+<p>Log in</p>
+<div class="clear"></div>
+          </div>
+      </header>
+    </div>
+    <div class="clear"></div>
+    <footer>
+
+    </footer>
+  </div>
   Instagram
 
   Capture and Share the World's Moments
