--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
   <div class="bg">
     <div class="blue"></div>
@@ -15,43 +17,58 @@
     </div>
     <div class="content">
       <header>
-          <div class="logo">
-              <img src="images/brand.png" alt="">
-          </div>
+
+        <div class="logo">
+          <img src="images/brand.png" alt="">
+        </div>
+        <nav>
           <div class="login">
-<img src="images/home.png" alt="">
-<p>Log in</p>
-<div class="clear"></div>
+            <img src="images/home.png" alt="">
+            <p>Log in</p>
+            <div class="clear"></div>
           </div>
+        </nav>
+
       </header>
+      <div class="clear"></div>
+      <main>
+        <section class="text-container">
+          <h1>Capture and Share<br>the World's Moments</h1>
+          <p>
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+          <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+              easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+              Oh yeah, did we mention it's free?
+          </p>
+
+        </section>
+        <section class="app-links">
+          <img src="images/badge-iphone.png" alt="">
+          <img src="images/badge-android.png" alt="">
+        </section>
+      </main>
     </div>
     <div class="clear"></div>
     <footer>
-
+      <div class="cont-footer">
+        <ul>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">Jobs</a> </li>
+          <li><a href="">Privacy</a> </li>
+          <li><a href="">Terms</a> </li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </div>
     </footer>
   </div>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
