--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -71,7 +71,7 @@
           <ul>
             <li class="float-left"><a href="#">About Us</a></li>
             <li class="float-left"><a href="#">Support</a></li>
-            <li class="float-left" float-left><a href="#">Blog</a></li>
+            <li class="float-left"><a href="#">Blog</a></li>
             <li class="float-left"><a href="#">Press</a></li>
             <li class="float-left"><a href="#">API</a></li>
             <li class="float-left"><a href="#">Jobs</a></li>
