--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
+      <header id="header">
         <div class="main_top">
           <div class="title">
             <img class="brand" src="./images/brand.png" alt="brand" /><button class="buttom"><img src="./images/home.png" alt="" /> <a>Log in</a>
@@ -17,30 +17,37 @@
         <div class="phones">
           <img src="./images/phones.png" alt="phones">
         </div>
-        <img class="frame" src="./images/frame.png" alt="frame" />
-        <p>
-          Capture and Share the World's Moments Instagram is a fast, beautiful
-          and fun way to share your life with friends and family. Take a picture
-          or video, choose a filter to transform its look and feel, then post to
-          Instagram &mdash; it's that easy. You can even share to Facebook,
-          Twitter, Tumblr and more. It's a new way to see the world. Oh yeah,
-          did we mention it's free? Download on the App Store Get it on Google
-          Play
-        </p>
+        <img class="frame_pic" src="./images/frame.png" alt="frame" />
+        <div class="frame">
+          <p>
+            <h1>Capture and Share the World's Moments</h1> Instagram is a fast, beautiful
+            and fun way to share your life with friends and family. Take a picture
+            or video, choose a filter to transform its look and feel, then post to
+            Instagram &mdash; it's that easy. You can even share to Facebook,
+            Twitter, Tumblr and more. It's a new way to see the world. Oh yeah,
+            did we mention it's free? Download on the App Store Get it on Google
+            Play
+          </p>
+          <div class="img_google_ios">
+            <img src="images/badge-android.png" alt="android"><img src="./images/badge-iphone.png" alt="ios">
+          </div>
+        </div>
       </div>
       </div>
-      <footer class="footer">
-        <ul>
-          <a href="#">About Us</a>
-          <a href="#">Support</a>
-          <a href="#">Blog</a>
-          <a href="#">Press</a>
-          <a href="#">API</a>
-          <a href="#">Jobs</a>
-          <a href="#">Privacy</a>
-          <a href="#">Terms</a>
-          <span>&copy; 2014 Instagram</span>
-        </ul>
+      <footer id="footer_main">
+        <div class="footer">
+          <ul>
+            <a href="#">About Us</a>
+            <a href="#">Support</a>
+            <a href="#">Blog</a>
+            <a href="#">Press</a>
+            <a href="#">API</a>
+            <a href="#">Jobs</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <span>&copy; 2014 Instagram</span>
+          </ul>
+        </div>
       </footer>
     </div>
   </body>
