Add HTML structure and reset.css file

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <main>
+    <section>
+      <img src="images/phones.png" alt="Phones">
+    </section>
+    <section>
+      <header>
+        <img src="images/brand.png" alt="Instagram Logo">
+        <button> <img src="images/home.png" alt="Home icon"> Log in</button>
+      </header>
+      <div>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; 
+            it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div>
+        <a href="#" target="_blank">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+        </a>
+        <a href="#" target="_blank">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </a>
+      </div>
+    </section>
+    <div class="clearfix"></div>
+  </main>
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#" target="_blank">About Us</a></li>
+        <li><a href="#" target="_blank">Support</a></li>
+        <li><a href="#" target="_blank">Blog</a></li>
+        <li><a href="#" target="_blank">Press</a></li>
+        <li><a href="#" target="_blank">API</a></li>
+        <li><a href="#" target="_blank">Jobs</a></li>
+        <li><a href="#" target="_blank">Privacy</a></li>
+        <li><a href="#" target="_blank">Terms</a></li>        
+      </ul>
+    </nav>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <p>&copy; 2014 Instagram</p>
+  </footer>
 </body>
 </html>
