--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,28 +7,25 @@
 </head>
 <body>
   <main>
-    <section>
+    <section class="col col40">
       <img src="images/phones.png" alt="Phones">
     </section>
-    <section>
+    <section class="col col60">
       <header>
         <img src="images/brand.png" alt="Instagram Logo">
-        <button> <img src="images/home.png" alt="Home icon"> Log in</button>
+        <button> <img src="images/home.png" alt="Home icon"><span> Log in</span>
+        </button>
       </header>
-      <div>
+      <div class="content">
           <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; 
             it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
-      </div>
-      <div>
-        <a href="#" target="_blank">
-          <img src="images/badge-iphone.png" alt="Download on the App Store">
-        </a>
-        <a href="#" target="_blank">
-          <img src="images/badge-android.png" alt="Get it on Google Play">
-        </a>
+          <div class="store-links">
+              <a href="#" target="_blank"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+              <a href="#" target="_blank"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+            </div>
       </div>
     </section>
     <div class="clearfix"></div>
@@ -46,8 +43,7 @@
         <li><a href="#" target="_blank">Terms</a></li>        
       </ul>
     </nav>
-
-    <p>&copy; 2014 Instagram</p>
+    <p class="copyright">&copy; 2014 Instagram</p>
   </footer>
 </body>
 </html>
