--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,7 +22,7 @@
 
         <div class=logos>
           <img src="images/brand.png" alt="Instagram-logo">
-          <button class="botón"> <img src="images/home.png" alt="home-button">Log In <a
+          <button class="botón"> <img id="logohome" src="images/home.png" alt="home-button">Log In <a
               href="https://instagram.com"></a> </button>
         </div>
 
@@ -50,17 +50,17 @@
   </main>
 
   <footer>
-
-    About Us
-    Support
-    Blog
-    Press
-    API
-    Jobs
-    Privacy
-    Terms
-
-    &copy; 2014 Instagram
+    <div id="footermenu">
+      <a href="https:/www.instagram.com">About Us</a>
+      <a href="https:/www.instagram.com">Support</a>
+      <a href="https:/www.instagram.com">Blog</a>
+      <a href="https:/www.instagram.com">Press</a>
+      <a href="https:/www.instagram.com">API</a>
+      <a href="https:/www.instagram.com">Jobs</a>
+      <a href="https:/www.instagram.com">Privacy</a>
+      <a href="https:/www.instagram.com">Terms</a>
+      <span>&copy; 2014 Instagram</span>
+    </div>
   </footer>
 
 
