--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
   <title>Instagram!</title>
+  <LINK href="./css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  Instagram
-<div>
+
+<div class="iphonepicture">
 
 <img src="images/phones.png" class="iphonepicture">
 
 </div>
 
-  <div class="div1">
+  <div class="instagramlogo">
 <img src="images/brand.png" class="instagramlogo">
   
 <button> <img src="images/home.png" class="homepicture">Log In 
@@ -20,7 +21,7 @@
 
 </section>
 
-<section>
+<section class="textpart">
 
   <h1> Capture and Share the World's Moments </h1>
 
@@ -30,7 +31,10 @@
 
   Oh yeah, did we mention it's free? </p>
 
-</section>
+  <img src="images/badge-iphone.png" alt="appstore">
+  <img src="images/badge-android.png" alt="googleplay">
+
+</section class="lastpart">
 
   Download on the App Store
   Get it on Google Play
