--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,7 +14,6 @@
 
   <div class="instagramlogo">
 <img src="images/brand.png" class="instagramlogo">
-  
 <button> <img src="images/home.png" class="homepicture">Log In 
 </button>
 </div>
@@ -25,7 +24,7 @@
 
   <h1> Capture and Share the World's Moments </h1>
 
- <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.
+ <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
