--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -53,8 +53,9 @@
         <li>Jobs</li>
         <li>Privacy</li>
         <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
       </ul>
-      &copy; 2014 Instagram
+     
     </nav>
   
   </footer>
