--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+    <link rel="stylesheet" href="css/reset.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
+    <title>Instagram</title>
+  </head>
 
-  Capture and Share the World's Moments
+  <body>
+    <main>
+      <div id="phones">
+        <img src="images/phones.png" alt="Movil phones image" />
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div id="textContainer">
+        <header>
+          <img src="images/brand.png" alt="Instagram logo" />
+          <button>Log in</button>
+        </header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <section>
+          <div id="text">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+              your life with friends and family.
+            </p>
+            <p class="customMargin">
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p class="customMargin">Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" class="customMargin" alt="iPhone badge" />
+            <img src="images/badge-android.png" class="customMargin" alt="Android badge" />
+          </div>
+        </section>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div id="clear"></div>
+    </main>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <footer>
+      <ul>
+        <li class="itemFloated"><a href="#">ABOUT US</a></li>
+        <li class="itemFloated"><a href="#">SUPPORT</a></li>
+        <li class="itemFloated"><a href="#">BLOG</a></li>
+        <li class="itemFloated"><a href="#">PRESS</a></li>
+        <li class="itemFloated"><a href="#">API</a></li>
+        <li class="itemFloated"><a href="#">JOBS</a></li>
+        <li class="itemFloated"><a href="#">PRIVACY</a></li>
+        <li class="itemFloated"><a href="#">TERMS</a></li>
+        <li class="itemFloated">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </footer>
+  </body>
 </html>
+
+<!--Download on the App Store
+    Get it on Google Play-->
