No sé que he tocado pero he hecho cambios

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,7 +13,7 @@
         <div id="phones">
           <img src="images/phones.png" alt="Instagram Phones" />
         </div>
-        <div class="text-container">
+        <div id="text-container">
           <div id="login">
             <img src="images/brand.png" alt="Instagram" />
             <button id="login-button" class="button">
