--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
-    <title>Instagram</title>
-  </head>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
+  <title>Instagram</title>
+</head>
 <body>
+
   <main>
-    <div>
-      <div>
+    <div class="container">
+      <div class="phones">
         <img src="images/phones.png" alt="smartphones showing the app">
       </div>
-      <div>
-        <div>
-          <img src="images/brand.png" alt="instagram logo">
-          <button>
-            <img src="images/home.png" alt="home icon">
+      <div class="right-text">
+        <div class="login">
+          <img src="images/brand.png" alt="Instagram logo">
+          <button class="login-button">
+            <img src="images/home.png" alt="home">
             <span>Log in</span>
           </button>
         </div>
-        <div>
+        <div class="box">
           <h1>Capture and Share the World's Moments</h1>
           <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
-          <div>
+          <div class="download">
             <img src="images/badge-iphone.png" alt="Download on the App Store">
             <img src="images/badge-android.png" alt="Get it on Google Play">
           </div>
         </div>
       </div>
+      <div class="clear"></div>
     </div>
   </main>
-    
-  <footer>
+  
+  <footer class="footer">
     <nav>
       <ul>
         <li><a href="#">About Us</a></li>
@@ -49,7 +50,7 @@
         <li><a href="#">Terms</a></li>
       </ul>
     </nav>
-    <span>&copy; 2014 Instagram</span>
+    <span class="copyright">&copy; 2014 Instagram</span>
   </footer>
 </body>
 
