final touch @ the logo

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,12 +8,12 @@
     <div id="container">
       <header id="header">
         <div class="main_top">
-          <div class="title">
-            <img class="brand" src="./images/brand.png" alt="brand" /><button class="buttom"><img src="./images/home.png" alt="" /> <a>Log in</a>
+          <div class="login">
+            <img class="brand" src="./images/brand.png" alt="brand" /><button class="buttom"><img src="./images/home.png" alt="" />Log in
             </button>
           </div>
       </header>
-      
+
       <div id="container_main">
         <div class="phones">
           <img src="./images/phones.png" alt="phones">
@@ -34,7 +34,7 @@
           <p>Oh yeah, did we mention it's free?</p>
             
           <div class="img_google_ios">
-            <img class="android_logo" src="images/badge-android.png" alt="android"><img class="ios_logo" src="./images/badge-iphone.png" alt="ios">
+            <img class="ios_logo" src="./images/badge-iphone.png" alt="ios"> <img class="android_logo" src="images/badge-android.png" alt="android">
           </div>
         </div>
       </div>
