Modify the syntaxis os login button

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,10 +19,10 @@
       <section>
         <div class="main-container">
           <img src="images/brand.png" alt="Instagram logo" />
-          <div class="home-container beveled">
+          <button class="home-container beveled">
             <img src="images/home.png" alt="Home icon" />
             <h3>Log in</h3>
-          </div>
+          </button>
           <div class="info-container">
             <h2>Capture and Share <br />the World's Moments</h2>
             <div class="text-info-container">
