--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Instagram</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
 
-  Capture and Share the World's Moments
+      <div class="col a">
+        <img src="images/phones.png" alt="phones">
+        <!--telefonos-->
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="col b">
+        <div>
+          <img src="images/brand.png" alt="Instagrama">
+          <button><img src="images/home.png"> Log in</button>
+          <!--INSTAGRAM-->
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="background">
+          <h3>Capture and Share the World's Moments</h3>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <br>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <br>
+          <p>Oh yeah, did we mention it's free?</p>          
+          <!--Texto-->
+        </div>        
 
-  Oh yeah, did we mention it's free?
+        <div class="clear">
+          <img src="images/badge-iphone.png" alt="iOs">
+          <img src="images/badge-android.png" alt="Android">
+          <!--Aplicaciones-->
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
-</body>
+      </div>
+      
+      <footer class="clear">
+        <ul class="top-links">
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">SUPPORT</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">PRESS</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">JOBS</a></li>
+          <li><a href="#">PRIVACY</a></li>
+          <li><a href="#">TERMS</a></li>
+        </ul>
+      
+      <p>©2014 Instagram</p>
+      </footer>
+
+
+
+  </body>
 </html>
