--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header><img class="logo" src="images/brand.png" alt="logo"><a class="button1" href=""><img src="images/home.png"
+        alt="home"> Log in</a>
 
-  Capture and Share the World's Moments
+  </header>
+  <main>
+    <div class="phones"><img class="image-phone" src="images/phones.png" alt="phones"></div>
+    <section><img class="recuadro" src="images/frame.png" alt="recuadro">
+      <div class="texto">
+        <h2 class="color">Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends
+          and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </section>
 
-  Download on the App Store
-  Get it on Google Play
+    <section><img class="store1" src="images/badge-iphone.png" alt="badge-iphone">
+      <img class="store2" src="images/badge-android.png" alt="badge-android"></section>
+    <footer>
+      <p><strong>
+        <a href="">About Us</a>
+        <a href="">Support</a>
+        <a href="">Blog</a>
+        <a href="">Press</a>
+        <a href="">API</a>
+        <a href="">Jobs</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
+        <a class="copy" href="">&copy; 2014 Instagram</a>
+        
+    </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  </main>
 </body>
+
 </html>
