Trying to set the icon and the text @ bottom

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,8 +9,7 @@
       <header id="header">
         <div class="main_top">
           <div class="login">
-            <img class="brand" src="./images/brand.png" alt="brand" /><button class="buttom"><img src="./images/home.png" alt="" />Log in
-            </button>
+            <img class="brand" src="./images/brand.png" alt="brand" /><button class="buttom"><img class="img_home" src="./images/home.png" alt="home_icon" /><a class="login_text" >Log in</a></button>
           </div>
       </header>
 
