--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <section>
+    <!-- Left box -->
+    <div id="box-one">
+      <img src="./images/phones.png" alt="android phone">
+    </div>
+    <!-- End of left box -->
 
-  Capture and Share the World's Moments
+    <!-- Right box-->
+    <div id="box-two">
+      <div>
+        <img src="./images/brand.png" alt="instagram brand">
+        <button><img src="./images/home.png" alt="home logo">Log In</button>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div>
+        <h3>Capture and Share the World's Moments</h3>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <a href="#"><img src="./images/badge-iphone.png" alt="iphone badge"></a>
+        <a href="#"><img src="./images/badge-android.png" alt="android badge"></a>
+      </div>
+    </div>
+    <!-- End of right box-->
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!-- Footer -->
+  <footer>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">Api</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
+  <!-- End of Footer -->  
 </body>
 </html>
