Finish all iterations for LAB

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,24 +7,29 @@
 <body>
   <div id="blue-background"></div>
   <main>
-    <div id="main-content">
+    <div id="body-content">
       <img src="images/phones.png" alt="instagram-phone-mockup">
       <div id="text-content">
-        <img src="images/brand.png" alt="instagram-logo" id="instagram-logo">
-        <button type="button">
-          <img src="images/home.png"> Log in
-        </button>
+        <div id="logo-login">
+          <img src="images/brand.png" alt="instagram-logo" id="instagram-logo">
+          <button type="button">
+            <img src="images/home.png">
+            <p>Log in</p>
+          </button>
+        </div>
         <img src="images/frame.png" >
-        <h1>Capture and Share the World's Moments</h1>
-        <p>
-          Instagram is a fast, beautiful and fun way to share your life with friends and family.
-        </p>
-        <p>
-          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-        </p>
-        <p>Oh yeah, did we mention it's free?</p>
-        <img src="images/badge-iphone.png">
-        <img src="images/badge-android.png">
+        <div id="frame-container">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+        </div>
       </div>
     </div>
   </main>
