Se reajustan los archivos, y se ponen correctamente las direcciones de las imagenes. Terminado

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
-  <link rel="stylesheet" href="../starter-code/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
  
 <body>
   <section class="seccion1">    
-      <img src="../starter-code/images/phones.png" alt="Imagen celulares" class="imgefecto">
-      <img src="../starter-code/images/brand.png" alt="Imagen logotipo">
-      <button class="boton"><img src="../starter-code/images/home.png" alt="Inicio">HOME</button>    
+      <img src="./images/phones.png" alt="Imagen celulares" class="imgefecto">
+      <img src="./images/brand.png" alt="Imagen logotipo">
+      <button class="boton"><img src="./images/home.png" alt="Inicio">HOME</button>    
   </section>
   
   <section class="seccion2">
@@ -23,8 +23,8 @@
     Oh yeah, did we mention it's free?
     </article>
     <div class="botones">
-     <img src="../starter-code/images/badge-iphone.png" alt="Download on the App Store" class="descarga">
-     <img src="../starter-code/images/badge-android.png" alt="Get it on Google Play" class="descarga">
+     <img src="./images/badge-iphone.png" alt="Download on the App Store" class="descarga">
+     <img src="./images/badge-android.png" alt="Get it on Google Play" class="descarga">
   </div>
   </div>
   </section>
