--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+<section id="sec1" >
+  <!-- Instagram -->
+  <img src="../starter-code/images/phones.png" alt="phones">
+</section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
+<section id="sec2" >
+  <div class="topsec2">
+  <img src="../starter-code/images/brand.png" alt="instagram logo">
+<button><img src="../starter-code/images/home.png" alt="home" >Log in</button>
+<div class="bottomsec2">
+  <h1> Capture and Share the World's Moments</h1>
+<p>
+  Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+<p>
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+</p>
+<p>
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+</p>
+</div>
+<div>
+  <!-- Download on the App Store -->
+  <img src="../starter-code/images/badge-iphone.png" alt="app store">
+  <!-- Get it on Google Play -->
+  <img src="../starter-code/images/badge-android.png" alt="google play">
+</div>
+</section>
+<br>
+  <footer>
   About Us
   Support
   Blog
@@ -27,5 +44,6 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
