--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <link rel="stylesheet" href="./css/main.css">  
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div id="outerBox">
+      <div id="leftBox" >
+        <img src="./images/phones.png" alt="Phones">
+      </div>
+      <div id="rightBox">
+        <header>
+          <img id="brand-img" src="./images/brand.png" alt="Instagram logo">
+          <div>
+            <img id="home-img" src="./images/home.png" alt="LogIn"> 
+            <a href="">Log in</a>
+          </div>
+        </header>
+        <section>  
+          <h1>
+          Capture and Share<br/>the World's Moments 
+          </h1>
+          <p>
+          Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          </p>
+          <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+          Oh yeah, did we mention it's free?
+          </p>
+        </section>
+        <div id="twoButtons">
+          <img src="./images/badge-iphone.png" alt="Download on the App Store"> 
+          <img src="./images/badge-android.png" alt="Get it on Google Play"> 
+        </div>
+      </div>
+    </div>
+    <footer>
+      <nav>
+        <a href="">ABOUT US</a>
+        <a href="">SUPPORT</a>
+        <a href="">BLOG</a>
+        <a href="">PRESS</a>
+        <a href="">API</a>
+        <a href="">JOBS</a>
+        <a href="">PRIVACY</a>
+        <a href="">TERMS</a>
+      </nav>
+      <span>&copy; 2014 Instagram</span>
+    </footer>  
+  </body>
 </html>
