--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,18 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div id="sf-background"></div>
+  <div id="sf-container" class="flex-center h-100pc w-100pc">
+    <div class="flex-column-t-c">
+      <div class="flex-row-c-s">
+        <div class="pad-lr-25">
+          <img src="./images/phones.png" alt="phone">
+        </div>
+        <div class="flex-column-t pad-lr-25">
+          <div class="flex-row-sb-c" style="padding: 10px 8px 0px 3px;">
+            <img class="info-column-brand" src="./images/brand.png" alt="brand">
+            <a href="#" class="push-button">
+              <img src="./images/home.png" alt="" style="vertical-align: middle;">
+              <span style="vertical-align: middle;">Log in</span>
+            </a>
+          </div>
+          <div id="info-column-text" style="position: relative; flex-grow: 1;">
+            <img src="./images/frame.png" alt="">
+            <div class="overlay" style="border: 8px solid transparent; border-radius: 8px;">
+              <div style="background-color: white; border: 8px solid white; border-radius: 8px; padding: 15px 20px;">
+                <h2 class="txt-light-blue">Capture and Share<br>the World's Moments</h2>
+                <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to 
+                Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. 
+                It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>  
+              </div>
+            </div>
+          </div>
+          <div id="info-column-buttons" style="">
+            <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
+            <a href="#"><img src="./images/badge-android.png" alt=""></a>  
+          </div>        
+        </div>
+      </div>
+      <div>
+        <div id="nav-bar">
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+          <span>&copy; 2014 Instagram</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 
-  Capture and Share the World's Moments
+<!--
+<body>
+  <div class="flex flex-r flex-jc-c flex-ai-c h-100vh">
+    <section class="flex flex-c flex-ai-c">
+      <div class="flex flex-r flex-ai-xc">
+        <div id="pic-sec">
+          <img src="./images/phones.png" alt="phone">
+        </div>
+        <div id="cont-sec" style="width: 500px;">
+          <div id="cont-sec-head" class="flex flex-r flex-jc-spb flex-ai-c">
+            <div>
+              <img src="./images/brand.png" alt="brand">
+            </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <div class="flex flex-r flex-ai-c" >
+              <img src="./images/home.png" alt="">
+              <span>Log in</span>    
+            </div>
+          </div>
+          <div id="cont-sec-body">
+            <div id="cont-sec-body-bkg">
+                <img src="./images/frame.png" alt="frame" srcset="">
+            </div>
+            <div id="cont-sec-body-text">
+              <h1>Capture and Share the World's Moments</h1>
+              <p>Instagram is a fast, beautiful and fun way to share
+                your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>    
+            </div>
+          </div>
+          <div id="cont-sec-button" class="flex flex-r">
+            <img src="./images/badge-iphone.png" alt="">
+            <img src="./images/badge-android.png" alt="">
+          </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<!- -           <div id="cont-sec-cont" class="flex flex-c flex-jc-c">
+            <div id="login-sec" class="flex flex-r flex-jc-spb flex-ai-c">
+            </div>
+            <div if="info-sec";>
+                <h1>Capture and Share the World's Moments</h1>
+                <p>Instagram is a fast, beautiful and fun way to share<br>
+                  your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look
+                  and feel, then post to Instagram &mdash; it's that easy. You can
+                  even share to Facebook, Twitter, Tumblr and more. It's a new way
+                  to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+            </div>
+ - ->
+          </div>
+        </div>
+      </div>
+      <div id="footer">
+          
+                
+      </div>
+    </section>      
+  </div>
 
-  Oh yeah, did we mention it's free?
+<!- - <body class="flex flex-r" style="justify-content: center; align-items: center;">
+ -->
+</html>
+
+
+<!--   Instagram
+
 
   Download on the App Store
   Get it on Google Play
@@ -25,7 +143,6 @@
   Jobs
   Privacy
   Terms
-
+ 
   &copy; 2014 Instagram
-</body>
-</html>
+-->
