--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,69 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header>
 
-  Capture and Share the World's Moments
+    <figure>
+      <img src="./images/brand.png" alt="INSTAGRAM">      
+    </figure>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div>
+        <figure>
+            <img src="./images/home.png" alt="home logo">
+        </figure>
+        <p>
+          Log in
+        </p>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </header>
 
-  Oh yeah, did we mention it's free?
+  <section id="section01">
 
-  Download on the App Store
-  Get it on Google Play
+    <figure id="phones">
+        <img src="./images/phones.png" alt="Phones">
+    </figure>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div id="main">
+      <h2>  Capture and Share the World's Moments
+      </h2>
+      <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </p>
+      <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p>
+          Oh yeah, did we mention it's free?
+      </p>
+      <div id=badges>
+        <figure>
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+        </figure>
+        <figure>
+          <img src="./images/badge-android.png" alt="Get it on Google Play">
+        </figure>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <ul>
+        <il> About Us </il>
+        <il> Support </il>
+        <il> Blog </il>
+        <il> Press </il>
+        <il> API </il>
+        <il> Jobs </il>
+        <il> Privacy </il>
+        <il> Terms </il>
+    </ul>
+    <p>
+        &copy; 2014 Instagram
+    </p>
 
-  &copy; 2014 Instagram
-</body>
+  </footer>
 </html>
