HTML v02 and CSS v01

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,51 +6,66 @@
 </head>
 
 <body>
-  <header>
+  <section id="fundo">
 
-    <figure>
-      <img src="./images/brand.png" alt="INSTAGRAM">      
-    </figure>
+  </section>
+  <section id="frente">   
 
-    <div>
-        <figure>
-            <img src="./images/home.png" alt="home logo">
-        </figure>
-        <p>
-          Log in
-        </p>
+    <div id="phones">
+      <figure >
+          <img src="./images/phones.png" alt="Phones">
+      </figure>
     </div>
-
-  </header>
-
-  <section id="section01">
-
-    <figure id="phones">
-        <img src="./images/phones.png" alt="Phones">
-    </figure>
 
     <div id="main">
-      <h2>  Capture and Share the World's Moments
-      </h2>
-      <p>
-          Instagram is a fast, beautiful and fun way to share your life with friends and family.
-      </p>
-      <p>
-          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-      </p>
-      <p>
-          Oh yeah, did we mention it's free?
-      </p>
-      <div id=badges>
-        <figure>
-            <img src="./images/badge-iphone.png" alt="Download on the App Store">
-        </figure>
-        <figure>
-          <img src="./images/badge-android.png" alt="Get it on Google Play">
-        </figure>
+
+      <header>
+          <div>
+            <figure>
+                <img src="./images/brand.png" alt="INSTAGRAM">      
+            </figure>
+          </div>
+          <div id = "home">
+            <div>
+              <figure>
+                  <img src="./images/home.png" alt="home logo">
+              </figure>
+            </div>
+            <div>
+              <p>
+                Log in
+              </p>
+            </div>
+          </div>
+      </header>
+
+      <div id="texto">
+          <h2>  Capture and Share 
+            <br> the World's Moments
+          </h2>
+          <p>
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+          <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+              Oh yeah, did we mention it's free?
+          </p>
+          <div id=badges>
+            <figure>
+                <img src="./images/badge-iphone.png" alt="Download on the App Store">
+            </figure>
+            <figure>
+              <img src="./images/badge-android.png" alt="Get it on Google Play">
+            </figure>
+          </div>
       </div>
+
     </div>
+
   </section>
+  
   <footer>
     <ul>
         <il> About Us </il>
