Start and finish exercise

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="container">
+    <div class="background"></div>
+    <div class="content">
+      <figure class="phones">
+        <img id="phones-img" src="images/phones.png" alt="Phones">
+      </figure>
+      <div class="main-content">
+        <div class="logo-login">
+          <figure>
+            <a href="#"><img id="logo" src="images/brand.png" alt="Instagram"></a> <!--usar dentro de um h1?-->
+          </figure>
+          <a id="login" href="#"><img src="images/home.png" alt="Home">Log in</a>
+        </div>
+        <div class="main-text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, 
+             <strong>beautiful</strong> and <strong>fun</strong>
+             way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to
+             transform its look and feel, then post to
+             Instagram &mdash; it's that easy.
+             You can even share to Facebook, Twitter,
+             Tumblr and more. It's a new way to see the
+             world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="app-store-links">
+            <figure>
+              <a href="#"><img src="images/badge-iphone.png" alt="Downlaod on the App Store"></a>
+            </figure>
+            <figure>
+              <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="links">
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+      </div>
+      <div class="copyright">
+        <p>&copy; 2014 Instagram</p>
+      </div>
+    </footer>
+  </section>
+  
 </body>
 </html>
