--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="container">
+    <div>
+      <img src="images/phones.png" alt="phones">
+    </div>
+    <div>
+      <div class="container2">
+        <img src="images/brand.png" alt="brand">
+        <button class="login">
+          <img src="images/home.png" alt="home">
+          <p>Log in</p>
+        </button>
+      </div>
+      <div class="container3">
+        <h2>Capture and Share</h2> 
+        <h2>the World's Moments</h2>
+        <div>
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life</p>
+          <p>with friends and family.</p>
+        </div>
+        <div>
+          <p>Take a picture or video, choose a filter to transform its look</p>
+          <p>and feel, then post to Instagram - it's that easy. You can</p>
+          <p>even share to Facebook, Twitter, Tumblr and more. It's a</p>
+          <p>new way to see the world.</p>
+        </div>
+        <div>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+      </div>
+      <div class="apps">
+        <img src="images/badge-iphone.png" alt="badge-iphone">
+        <img src="images/badge-android.png" alt="badge-android" id="android">
+      </div>
+    </div>
+  </section>
+  <footer>
+    <ul class="footer">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#" id="grey">&copy; 2014 Instagram</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
+  
