--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="background"></div>
+  
+  <div class="resto">
+    <div class="section">
+        <img src="./images/phones.png" alt="Phone">
+        <div class="totalInfo">
+          <div class="login">
+            <img src="./images/brand.png" alt="Instagram">
+            <button>Log in</button>
+          </div>
+          
+          <div class="info">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.
+              <br><br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br><br>
+              Oh yeah, did we mention it's free?
+              <br>
+              Download on the App Store
+              Get it on Google Play
+            </p>
+            <div class="imbagens">
+              <img src="./images/badge-iphone.png" alt="Appstore">
+              <img src="./images/badge-android.png" alt="Google Play">
+            </div>
+          </div>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <div class="bottom">
+        <ul>
+          <li>
+            <a href="">About Us</a>
+            <a href="">Support</a>
+            <a href="">Blog</a>
+            <a href="">Press</a>
+            <a href="">API</a>
+            <a href="">Jobs</a>
+            <a href="">Privacy</a>
+            <a href="">Terms</a>
+          </li>
+        </ul>
+        &copy; 2014 Instagram
+      </div>
+    </div>
+ 
 </body>
 </html>
